@@ -7,7 +7,7 @@ $title
 <head>
 <title>eBox - <% $title %></title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="/data/css/public.css" rel="stylesheet" type="text/css" />
+<link href="/dynamic-data/css/public.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/data/js/common.js">//</script>
 <script type="text/javascript" src="/data/js/prototype.js">//</script>
 <script type="text/javascript" src="/data/js/scriptaculous/scriptaculous.js">//</script>
