@@ -8,7 +8,7 @@ $destination
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>eBox - <% $title %></title>
-<link href="/data/css/public.css" rel="stylesheet" type="text/css" />
+<link href="/dynamic-data/css/public.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/data/js/common.js">//</script>
 <script type="text/javascript" src="/data/js/prototype.js">//</script>
 
