@@ -1,3 +1,7 @@
+HEAD
+	+ Bug fix: generate public.css and login.css in dynamic-www directory
+	  which is /var/lib/ebox/dynamicwww/css/ and not in /usr/share/ebox/www/css
+	  as these files are generate every time eBox's apache is restarted
 1.3.6
 	+ Bug fix: override _ids in EBox::Events::Watcher::Log to not return ids
 	which do not exist
